[project]
name = "instruction-tuning-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.10.1",
    "datasets>=4.0.0",
    "einops>=0.8.1",
    "huggingface-hub>=0.34.4",
    "loralib>=0.1.2",
    "pandas>=2.3.2",
    "peft>=0.17.1",
    "transformers>=4.55.4",
]
